@@ -3,7 +3,10 @@ $Id$
 MIDIboxFM V1.4j
 ~~~~~~~~~~~~~~~
 
-   o support for 8bit LCD access mode (e.g. for Newhaven OLEDs)
+   o support for 8bit LCD access mode (e.g. for Newhaven OLEDs) which might be required
+     when you are using a PIC18F4685, since it normally accesses LCDs in 4bit mode.
+     In order to enable this driver, set the USE_8BIT_LCD_DRIVER flag to 1 in your
+     setup_*.asm file, and rebuild the application.
 
 
 MIDIboxFM V1.4i
